@@ -1,6 +1,3 @@
-EBUILD cl-gnome-meta-2.28-r1.ebuild 3391 RMD160 074c9b12eafb52848d441213061bf107f5a015c6 SHA1 cf87ff0157a92e2ca3f99ba221c072609b920bb7 SHA256 a77c30521ddb575f00dc202e5388c6ed9bb66147ea9b4252b90fb285defc0c43
-EBUILD cl-gnome-meta-2.28-r2.ebuild 3440 RMD160 c99fab0e592e3911b5d2e83a1039a6265e3c3b3a SHA1 6140d5b5b4215e6fbe2368620d80daa209f447f5 SHA256 080d8bfa2405c71ae41c3fc0ecb7deca2493b652d0e41e3b6cc0045411741cc4
 EBUILD cl-gnome-meta-2.28-r3.ebuild 3511 RMD160 e086ed94edc021aac2dd7a547cf068c343222f24 SHA1 ae3f7cc8ab2ca641a0bf1433503b7b07b033630f SHA256 5b8705ba1e1bce87e3c1c481c27bc019f42b24410deb08c29a795b789de4537f
-EBUILD cl-gnome-meta-2.28.ebuild 3390 RMD160 3c26a90f599da7cd322010d1fa18f87973b3aefe SHA1 9a85d3ad81eae702aa202ed2eb63b3d0a0745365 SHA256 071af27e87eeba1496171d3c17bef2974f2b6af216b4bb5c17cabd355bd91fc4
-EBUILD cl-gnome-meta-2.32.ebuild 3944 RMD160 6029d9492c4227c551c0792899edab51ac530638 SHA1 c95d5d22dcbae4862df2f79fc4bee0921241cfa8 SHA256 03614633eeb99baab4ea7034ad5e580f55f98fcaa9fc0b988fdde855ba2f939a
-MISC ChangeLog 1133 RMD160 af5cda43917ae1c4bd9173d5185fbcb92f78f264 SHA1 bed721674283c56e42dcfa6fd39bbe0ebc822aef SHA256 8219ee9577b8d000166fab9574e0b739f286b024dd2460b28367cce8510bb475
+EBUILD cl-gnome-meta-2.32-r1.ebuild 3999 RMD160 af6bf963c5e0a5e48b253fd3e9490d267ca64080 SHA1 1647bad15bcddbe6513c78a6b2f04f94ad539e09 SHA256 0982c53364f109a9d5b71e9493c8d6d1f62ac0c6c584eb55e6aeea31b4cbbe58
+MISC ChangeLog 1478 RMD160 ca40c0e58bb39300c8aa5764af85158cf5481730 SHA1 a6cfe9dda10c7e6dece5ce39096427f74263192a SHA256 e9f96d86f3c7dd7b3271fc45ea0868eb0a0d1163f0e6fe786677a0facf9d0f1e
